<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001451"
    tools:context=".activity.ProfilePageActivity">

    <TextView
        android:id="@+id/ProfilePageActivityTitleTextView"
        android:layout_width="237dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="#001451"
        android:fontFamily="@font/metamorphous"
        android:text="@string/user_profile"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProfilePageActivityUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:background="#001451"
        android:fontFamily="@font/metamorphous"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="#001451"
        android:fontFamily="@font/metamorphous"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePageActivityTitleTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginTop="192dp"
        android:background="#001451"
        android:fontFamily="@font/metamorphous"
        android:text="@string/trips"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePageActivityUsernameTextView" />

    <ImageButton
        android:id="@+id/ProfilePageActivityTripsImageButton"
        android:layout_width="94dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:background="#00109E"
        android:contentDescription="@string/tripimagebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/ProfilePageAcitivityLogoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#ED0202"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePageActivityTripsImageButton"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="-2dp"
        app:srcCompat="@drawable/lighthouseimg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>